--- a/audience.html
+++ b/audience.html
@@ -18,7 +18,7 @@
 			<ul class="links">
 				<img src="images/murano.png" width="230" alt="">
 				<img src="images/exosite.png" width="230" alt="">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="home.html">Home</a></li>
 				<li><a href="speech.html">Speech information</a></li>
 				<li><a href="audience.html">Audience inquiry</a></li>
 				<li><a href="voting.html">Voting results</a></li>
