--- a/web/audience.html
+++ b/web/audience.html
@@ -1,29 +1,28 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Hackathon-Audience</title>
+		<title>觀眾頁  LINE-HACK</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/logo.ico" type="image/x-icon" />
 	</head>
 	<body class="subpage">
 		<!-- Header -->
-		<header id="header">
-			<h1><a href="#">Speech Service <span>by HACKATHON</span><a>&emsp;&emsp;&emsp;&emsp;LINE BOT ID :  @etx7735c</a></a></h1>
-			<a href="#menu">Menu</a>
-		</header>
-
+			<header id="header">
+				<h1><a href="#">演講者平台<a>&emsp;&emsp;&emsp;&emsp;LINE BOT ID : @etx7735c</a></a></h1>
+				<a href="#menu">選單</a>
+			</header>
 		<!-- Nav -->
-		<nav id="menu">
-			<ul class="links">
-				<img src="images/murano.png" width="230" alt="">
-				<img src="images/exosite.png" width="230" alt="">
-				<li><a href="home.html">Home</a></li>
-				<li><a href="speech.html">Speech information</a></li>
-				<li><a href="audience.html">Audience inquiry</a></li>
-				<li><a href="voting.html">Voting results</a></li>
-			</ul>
-		</nav>
+			<nav id="menu">
+				<ul class="links">
+					<img src="images/murano.png" width="230" alt="">
+					<li><a href="home.html">首頁</a></li>
+					<li><a href="speech.html">講師頁</a></li>
+					<li><a href="audience.html">觀眾頁</a></li>
+					<li><a href="voting.html">投票頁</a></li>
+				</ul>
+			</nav>
 		<!-- Main -->
 		<div id="main">
 			<section class="wrapper style1">
