--- a/web/index.html
+++ b/web/index.html
@@ -1,34 +1,25 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Hackathon-Speech</title>
+		<title>LINE-HACK2018</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/logo.ico" type="image/x-icon" />
 	</head>
-	<body class="subpage">
+	<body>
 		<!-- Main -->
-		<div id="main">
-			<div class="inner">
-				<header class="align-center">
-					<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-					<form id=vote>	
-						<div class="inner">
-							<h2>Enter Confirmation Code</h2>
-							<center><input type=text id=title_na name=title style="height:40px;width:500px"></center><br />
-							<input type=button id=send value=submit>&nbsp&nbsp&nbsp&nbsp<input type=reset value=reset>
-						</div>
-					</form>
-				</header>
-			</div>
-		</div>
-
+			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+			<form id=verify class="align-center">	
+				<h2>請於下方欄位輸入驗證碼</h2>
+				<center><input type=text id=verify name=verify style="height:50px;width:500px"></center><br />
+				<input type=button id=send value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除>
+			</form>
 		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 	</body>
 </html>
