--- a/web/home.html
+++ b/web/home.html
@@ -10,7 +10,7 @@
 	<body>
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID : @etx7735c </a></a></h1>
+				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID :  透過驗證碼GET邀請碼至此</a></a></h1>
 				<a href="#menu">選單</a>
 			</header>
 		<!-- Nav -->
@@ -48,16 +48,6 @@
 				<!-- Two -->
 					<section class="wrapper style2">
 						<div id="two" class="inner">
-							<header class="align-center"> 
-								<h2>之後在討論標題與去留</h2>
-								<iframe width="100%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
-								<a href="#three" class="button big alt scrolly">繼續</a>
-							</header>
-						</div>
-					</section>
-				<!-- Three -->
-					<section class="wrapper style3">
-						<div id="three" class="inner">
 							<header class="align-center">
 								<h2>演講者平台功能介紹</h2>
 								<p>各種頁面各種功能的大概介紹</p>
@@ -96,122 +86,33 @@
 									</div>
 								</div>
 							</div>
+							<div class="align-center"><a href="#three" class="button big alt scrolly">繼續</a></div>
 						</div>
 					</section>
-				<!-- Four -->
-					<section class="wrapper style4">
-						<div class="inner">
+				<!-- Three -->
+					<section class="wrapper style3">
+						<div id="three" class="inner">
 							<header class="align-center">
-								<h2>Speech Service Developers</h2>
-								<p>Development work for all developers in this Speech Service.</p>
+								<h2>演講者平台開發人員</h2>
+								<p>此演講者平台中所有開發人員的負責內容</p>
 							</header>
 							<div class="flex flex-8">
 								<div class="align-center">
 									<img class="image fit-8" src="images/ron.png" width="140" height="140" alt="" />
-									<p class="caption"><a href="#" class="link"><span>Mark Chang</span></a><br />
-														Presentation<br />Live demo</p>
-								</div>
-								<div class="align-center">
-									<img class="image fit-8" src="images/ricky.jpg" width="140" height="140" alt="" />
-									<p class="caption"><a href="#" class="link"><span>Ricky Chao<br />LINE beacon<br />Hardware</span></a></p>
+									<p class="caption">張紹鍇<br />負責內容</p>
 								</div>
 								<div class="align-center">
 									<img class="image fit-8" src="images/ron.png" width="140" height="140" alt="" />
-									<p class="caption">Robert Chen<br />LINE bot</p>
-								</div>
-								<div class="align-center">
-									<img class="image fit-8" src="images/robin.png" width="140" height="140" alt="" />
-									<p class="caption">Robin Zhang<br />LINE bot</p>
+									<p class="caption">謝昌諺<br />負責內容</p>
 								</div>
 								<div class="align-center">
 									<img class="image fit-8" src="images/ron.png" width="140" height="140" alt="" />
-									<p class="caption">Ron Hsieh<br />Service frontend</p>
-								</div>
-								<div class="align-center">
-									<img class="image fit-8" src="images/steve.png" width="140" height="140" alt="" />
-									<p class="caption">Steve Lo<br />Exchange service<br />TSDB</p>
-								</div>
-								<div class="align-center">
-									<img class="image fit-8" src="images/tina.png" width="140" height="140" alt="" />
-									<p class="caption">Tina Shih<br />Powerpoint</p>
-								</div>
-								<div class="align-center">
-									<img class="image fit-8" src="images/ron.png" width="140" height="140" alt="" />
-									<p class="caption">York Lin<br />LINE beacon<br />Hardware</p>
+									<p class="caption">林宸右<br />負責內容</p>
 								</div>
 							</div>
 						</div>
 					</section>
 			</div>
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex flex-5">
-						<div class="col">
-							<h3>Company</h3>
-							<ul class="alt">
-								<li><a href="https://exosite.com/about/">About</a></li>
-								<li><a href="https://exosite.com/iot-partners/">Partners</a></li>
-								<li><a href="https://exosite.com/press/">Press</a></li>
-								<li><a href="http://info.exosite.com/contact-us">Contact</a></li>
-								<li><a href="http://info.exosite.com/careers">Careers</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Products</h3>
-							<ul class="alt">
-								<li><a href="https://exosite.com/iot-solutions/">Industry Solutions</a></li>
-								<li><a href="https://exosite.com/iot-solutions/condition-monitoring/">Condition Monitoring</a></li>
-								<li><a href="https://exosite.com/iot-solutions/home-automation/">Home Automation</a></li>
-								<li><a href="https://exosite.com/iot-platform/">Platform</a></li>
-								<li><a href="https://exosite.com/iot-marketplace/">Exchange Marketplace</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Services</h3>
-							<ul class="alt">
-								<li><a href="https://exosite.com/iot-strategy-and-consulting-services/">Consulting</a></li>	
-								<li><a href="https://exosite.com/iot-strategy-and-consulting-services/">Professional</a></li>	
-								<li><a href="https://exosite.com/iot-strategy-and-consulting-services/">Support</a></li>	
-								<li><a href="https://exosite.com/iot-strategy-workshop/">Fusion Workshop</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Resources</h3>
-							<ul class="alt">
-								<li><a href="https://exosite.com/iot-white-papers/">White Papers</a></li>	
-								<li><a href="https://exosite.com/iot-case-studies/">Case Studies</a></li>	
-								<li><a href="https://exosite.com/iot-webinars/">Webinars</a></li>	
-								<li><a href="https://exosite.com/internet-of-things-articles/">Articles</a></li>	
-								<li><a href="https://exosite.com/blog/">Blog</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Developer</h3>
-							<ul class="alt">
-								<li><a href="https://www.exosite.io/login">Log In</a></li>	
-								<li><a href="http://info.exosite.com/platform-sign-up">Sign Up</a></li>	
-								<li><a href="http://docs.exosite.com/">Documentation</a></li>	
-								<li><a href="https://support.exosite.com/hc/en-us">Support Site</a></li>	
-								<li><a href="https://community.exosite.com/">Community Forum</a></li>	
-								<li><a href="https://status.exosite.com/">Platform Status</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="https://www.facebook.com/exosite" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://twitter.com/exosite" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.linkedin.com/company/987681/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://www.instagram.com/exositecorp/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://plus.google.com/+Exosite" class="icon fa-google-plus"><span class="label">Google Plus</span></a></li>
-						<li><a href="https://www.youtube.com/user/Exosite" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
-						<li><a href="https://vimeo.com/exosite" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-					</ul>
-					&copy; Exosite 2018 | 275 Market St, Suite 535, Minneapolis, MN 55405
-				</div>
-			</footer>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
