--- a/web/speech.html
+++ b/web/speech.html
@@ -10,7 +10,7 @@
 	<body class="subpage">
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="#">演講者平台<a>&emsp;&emsp;&emsp;&emsp;LINE BOT ID : @etx7735c</a></a></h1>
+				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID :  透過驗證碼GET邀請碼至此</a></a></h1>
 				<a href="#menu">選單</a>
 			</header>
 		<!-- Nav -->
@@ -23,42 +23,48 @@
 					<li><a href="voting.html">投票頁</a></li>
 				</ul>
 			</nav>
-		<!-- Main -->
-		<div id="main">
-			<!-- One -->
+		<!-- One -->
 			<section class="wrapper style1">
 				<div class="inner">
 					<header class="align-center">
 						<h2><span id=title></span></h2>
 						<p><span id=title2></span></p>
-						<a href="#content" class="button big alt scrolly">Continue</a>
+						<a href="#two" class="button big alt scrolly">繼續</a>
 					</header>
 				</div>
 			</section>
-			<!-- Two -->
-			<section id="content" class="wrapper style2">
+		<!-- Two -->
+			<section class="wrapper style2">
+				<div id="two" class="inner">
+					<header class="align-center"> 
+						<h2>之後在討論標題與去留</h2>
+						<iframe width="100%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+						<a href="#three" class="button big alt scrolly">繼續</a>
+					</header>
+				</div>
+			</section>
+		<!-- Three -->
+			<section id="three" class="wrapper style1">
 				<div class="inner">
-					<h2>Send Message To Line </h2>
+					<h2>發送訊息</h2>
 					<form action="" method="">
-						<h4>Type some message to upload :</h4>
+						<h4>請輸入要發送至 Line Bot 的訊息 :</h4>
 						<div class="6u 12u$(xsmall)">
 							<input type="text" name="name" id="message" value="" placeholder="Message" />
-							<a><input id=send type="button" value="submit" /><font color=red><span id=box></span></font></a>
+							<input id=send type="button" value="submit" /><font color=red><span id=box></span></font>
 						</div>
 					</form>
 				</div>
 			</section>
-			<!-- I am a dividing line -->
-			<section class="wrapper style3">
-			<section>
-			<!-- Three -->
-			<section class="wrapper style2">
+		<!-- I am a dividing line -->
+			<section class="wrapper style3"></section>
+		<!-- Four -->
+			<section class="wrapper style1">
 				<div class="inner">
-					<h2>Paste Any Link</h2>
-					<ul class=link_list>
-					</ul>
+					<h2>紀錄網址</h2>
+					<ul class=link_list></ul>
 					<form action="" method="">
-						<h4>Paste the link to upload :</h4>
+						<h4>請貼上或輸入要紀錄至此的網站網址 :</h4>
 						<div class="6u 12u$(xsmall)">
 							<input type="text" name="name" id="na" value="" placeholder="Link" />
 							<input id=add type="button" value="submit" />
@@ -66,78 +72,6 @@
 					</form>
 				</div>
 			</section>
-		</div>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<div class="flex flex-5">
-					<div class="col">
-						<h3>Company</h3>
-						<ul class="alt">
-							<li><a href="https://exosite.com/about/">About</a></li>
-							<li><a href="https://exosite.com/iot-partners/">Partners</a></li>
-							<li><a href="https://exosite.com/press/">Press</a></li>
-							<li><a href="http://info.exosite.com/contact-us">Contact</a></li>
-							<li><a href="http://info.exosite.com/careers">Careers</a></li>
-						</ul>
-					</div>
-					<div class="col">
-						<h3>Products</h3>
-						<ul class="alt">
-							<li><a href="https://exosite.com/iot-solutions/">Industry Solutions</a></li>
-							<li><a href="https://exosite.com/iot-solutions/condition-monitoring/">Condition Monitoring</a></li>
-							<li><a href="https://exosite.com/iot-solutions/home-automation/">Home Automation</a></li>
-							<li><a href="https://exosite.com/iot-platform/">Platform</a></li>
-							<li><a href="https://exosite.com/iot-marketplace/">Exchange Marketplace</a></li>
-						</ul>
-					</div>
-					<div class="col">
-						<h3>Services</h3>
-						<ul class="alt">
-							<li><a href="https://exosite.com/iot-strategy-and-consulting-services/">Consulting</a></li>	
-							<li><a href="https://exosite.com/iot-strategy-and-consulting-services/">Professional</a></li>	
-							<li><a href="https://exosite.com/iot-strategy-and-consulting-services/">Support</a></li>	
-							<li><a href="https://exosite.com/iot-strategy-workshop/">Fusion Workshop</a></li>
-						</ul>
-					</div>
-					<div class="col">
-						<h3>Resources</h3>
-						<ul class="alt">
-							<li><a href="https://exosite.com/iot-white-papers/">White Papers</a></li>	
-							<li><a href="https://exosite.com/iot-case-studies/">Case Studies</a></li>	
-							<li><a href="https://exosite.com/iot-webinars/">Webinars</a></li>	
-							<li><a href="https://exosite.com/internet-of-things-articles/">Articles</a></li>	
-							<li><a href="https://exosite.com/blog/">Blog</a></li>
-						</ul>
-					</div>
-					<div class="col">
-						<h3>Developer</h3>
-						<ul class="alt">
-							<li><a href="https://www.exosite.io/login">Log In</a></li>	
-							<li><a href="http://info.exosite.com/platform-sign-up">Sign Up</a></li>	
-							<li><a href="http://docs.exosite.com/">Documentation</a></li>	
-							<li><a href="https://support.exosite.com/hc/en-us">Support Site</a></li>	
-							<li><a href="https://community.exosite.com/">Community Forum</a></li>	
-							<li><a href="https://status.exosite.com/">Platform Status</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="copyright">
-				<ul class="icons">
-					<li><a href="https://www.facebook.com/exosite" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://twitter.com/exosite" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.linkedin.com/company/987681/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://www.instagram.com/exositecorp/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://plus.google.com/+Exosite" class="icon fa-google-plus"><span class="label">Google Plus</span></a></li>
-					<li><a href="https://www.youtube.com/user/Exosite" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
-					<li><a href="https://vimeo.com/exosite" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-				</ul>
-				&copy; Exosite 2018 | 275 Market St, Suite 535, Minneapolis, MN 55405
-			</div>
-		</footer>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
