--- a/web/success.html
+++ b/web/success.html
@@ -5,25 +5,20 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/logo.ico" type="image/x-icon" />
 	</head>
-	<body class="subpage">
+	<body>
 		<!-- Main -->
-		<div id="main">
-			<div class="inner">
-				<header class="align-center">
-					<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-					<h2>Successful voting</h2>
-					<a href="voting.html" class="button big alt scrolly">Continue</a>
-				</header>
+			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+			<div class="align-center">
+				<h2>投票建立成功</h2>
+				<a href="voting.html" class="button big alt scrolly">繼續</a>
 			</div>
-		</div>
-
 		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 	</body>
 </html>
