--- a/web/index.html
+++ b/web/index.html
@@ -10,11 +10,11 @@
 	<body>
 		<!-- Main -->
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-			<form id=verify class="align-center">	
+			<div id=verify class="align-center">	
 				<h2>請於下方欄位輸入驗證碼</h2>
 				<center><input type=text id=verify name=verify style="height:50px;width:500px"></center><br />
 				<input type=button id=send value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除>
-			</form>
+			</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
