將js跨域傳值新增

--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,8 @@
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 			<div id=verify class="align-center">	
 				<h2>請於下方欄位輸入驗證碼</h2>
-				<center><input type=text id=verify name=verify style="height:50px;width:500px"></center><br />
-				<input type=button id=send value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除>
+				<center><input type=text id=SentId name=SentId style="height:50px;width:500px"></center><br />
+				<input type=button id=sent onclick='sentid()' value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除>
 			</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -21,5 +21,6 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/index.js"></script>
 	</body>
 </html>
