--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 			<div id=verify class="align-center">	
 				<h2>請於下方欄位輸入驗證碼</h2>
 				<center><input type=text id=SentId name=SentId style="height:50px;width:500px"></center><br />
-				<input type=button id=sent onclick='sentid()closeWin()' value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除>
+				<input type=button id=sent onclick='sentid()' value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除 onclick='getid()'>
 			</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -22,5 +22,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/index.js"></script>
+			<script src="assets/js/jquery.cookie.js"></script>
 	</body>
 </html>
