挪掉home的ppt跟 新增sildshare 到 speech

--- a/web/home.html
+++ b/web/home.html
@@ -36,18 +36,8 @@
 			</section>
 			<div >
 				<!-- One -->
-					<section class="wrapper style1">
-						<div id="one"class="inner">
-							<header class="align-center">
-								<h2>演講者平台介紹</h2>
-								<iframe src="https://docs.google.com/a/exosite.com/presentation/d/e/2PACX-1vQwsf9_TXmJXh38MLLQJy2bbEcDeXiGdoKl5poJaU3ytp-bJ1jSnGdv047LYIR6tWLNGhXNtLba53tY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-								<a href="#two" class="button big alt scrolly">繼續</a>
-							</header>
-						</div>
-					</section>
-				<!-- Two -->
 					<section class="wrapper style2">
-						<div id="two" class="inner">
+						<div id="one" class="inner">
 							<header class="align-center">
 								<h2>演講者平台功能介紹</h2>
 								<p>各種頁面各種功能的大概介紹</p>
@@ -86,12 +76,12 @@
 									</div>
 								</div>
 							</div>
-							<div class="align-center"><a href="#three" class="button big alt scrolly">繼續</a></div>
+							<div class="align-center"><a href="#two" class="button big alt scrolly">繼續</a></div>
 						</div>
 					</section>
-				<!-- Three -->
+				<!-- Two -->
 					<section class="wrapper style3">
-						<div id="three" class="inner">
+						<div id="two" class="inner">
 							<header class="align-center">
 								<h2>演講者平台開發人員</h2>
 								<p>此演講者平台中所有開發人員的負責內容</p>
