--- a/web/speech.html
+++ b/web/speech.html
@@ -34,13 +34,17 @@
 				</div>
 			</section>
 		<!-- Two -->
-			<section class="wrapper style2">
+			<section class="wrapper style3">
 				<div id="two" class="inner">
-					<header class="align-center"> 
-						<h2>之後在討論標題與去留</h2>
-						<iframe width="100%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
-						<a href="#three" class="button big alt scrolly">繼續</a>
+					<header class="align-center">
+						<h2>標題我不知道要打什麼</h2>
+						<p>此演講者平台中所有開發人員的負責內容</p>
 					</header>
+					<div class="flex flex-2">
+						<iframe width="380px" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+						<iframe width="1140px" height="700px" src="//www.slideshare.net/slideshow/embed_code/key/CxwGbWQO0mDtUE" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"> </iframe>
+					</div>
+					<div class="align-center"><a href="#three" class="button big alt scrolly">繼續</a></div>
 				</div>
 			</section>
 		<!-- Three -->
@@ -51,7 +55,7 @@
 						<h4>請輸入要發送至 Line Bot 的訊息 :</h4>
 						<div class="6u 12u$(xsmall)">
 							<input type="text" name="name" id="message" value="" placeholder="Message" />
-							<input id=send type="button" value="submit" /><font color=red><span id=box></span></font>
+							<input id=send type="button" value="送出" /><font color=red><span id=box></span></font>
 						</div>
 					</form>
 				</div>
@@ -67,7 +71,7 @@
 						<h4>請貼上或輸入要紀錄至此的網站網址 :</h4>
 						<div class="6u 12u$(xsmall)">
 							<input type="text" name="name" id="na" value="" placeholder="Link" />
-							<input id=add type="button" value="submit" />
+							<input id=add type="button" value="送出" />
 						</div>
 					</form>
 				</div>
