--- a/web/audience.html
+++ b/web/audience.html
@@ -16,7 +16,7 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<img src="images/murano.png" width="230" alt="">
+					<img src="images/line hack.png" width="230" alt="">
 					<li><a href="home.html">首頁</a></li>
 					<li><a href="speech.html">講師頁</a></li>
 					<li><a href="audience.html">觀眾頁</a></li>
@@ -24,7 +24,16 @@
 				</ul>
 			</nav>
 		<!-- One -->
-			<section id="one" class="wrapper style1">
+			<section class="wrapper style1">
+				<div id="one" class="inner">
+					<div class="flex flex-12">
+						<iframe width="35%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+						<img src="images/banner.jpg" width="65%" height="700px">
+					</div>
+				</div>
+			</section>
+		<!-- Two -->
+			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<ul>
 						<h4 align=center><input type=button id=title1 value="觀眾詢問清單"  style="height:75px;width:1368px"></h4>
