--- a/web/index.html
+++ b/web/index.html
@@ -9,11 +9,15 @@
 	</head>
 	<body>
 		<!-- Main -->
-			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+			<br /><br /><br /><br /><br /><br /><br /><br />
 			<div id=verify class="align-center">	
-				<h2>請於下方欄位輸入驗證碼</h2>
-				<center><input type=text id=SentId name=SentId style="height:50px;width:500px"></center><br />
-				<input type=button id=sent onclick='sentid()' value=送出>&emsp;&emsp;&emsp;&emsp;&emsp;<input type=reset value=清除 onclick='getid()'>
+				<h3>請輸入演講名稱</h3>
+				<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br />
+				<h3>請輸入驗證碼</h3>
+				<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br />
+				<h3>請輸入簡報網頁</h3>
+				<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br />
+				<input type=button id=sent onclick='sentid()' value=送出>
 			</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -22,6 +26,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/index.js"></script>
-			<script src="assets/js/jquery.cookie.js"></script>
 	</body>
 </html>
