--- a/web/voting.html
+++ b/web/voting.html
@@ -16,7 +16,7 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<img src="images/murano.png" width="230" alt=""> 
+					<img src="images/line hack.png" width="230" alt=""> 
 					<li><a href="home.html">首頁</a></li>
 					<li><a href="speech.html">講師頁</a></li>
 					<li><a href="audience.html">觀眾頁</a></li>
@@ -33,7 +33,9 @@
 						<div class="align-center">
 								投票主題:	<center><input type=text id=title_na name=title style="height:40px;width:400px"></center><br />
 								投票選項1:<center><input type=text id=title_op1 name=option1 style="height:40px;width:400px"></center>
-								投票選項2:<center><input type=text id=title_op2 name=option2 style="height:40px;width:400px"></center><br />
+								投票選項2:<center><input type=text id=title_op2 name=option2 style="height:40px;width:400px"></center>
+								投票選項3:<center><input type=text id=title_op2 name=option2 style="height:40px;width:400px"></center>
+								投票選項4:<center><input type=text id=title_op2 name=option2 style="height:40px;width:400px"></center><br />
 								&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 								<input type=button id=send value=送出>&emsp;&emsp;<input type=reset value=清除>
 						</div>
