--- a/web/home.html
+++ b/web/home.html
@@ -10,7 +10,7 @@
 	<body>
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId2"></a></a></a></h1>
+				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
 				<a href="#menu">選單</a>
 			</header>
 		<!-- Nav -->
@@ -118,7 +118,25 @@
 							console.log(meet_name);
 							console.log(sent_id);
 							console.log(slide_link);
-							$(WebId).text(sent_id);
+							
+							$.ajax({
+								type: 'POST',
+								url: 'https://messfar.com/line_saying_api/create_meet',
+								contentType: "application/json; charset=utf-8",
+								dataType: 'json',
+								data: JSON.stringify({
+									"meet_name": meet_name,
+									"web_id": sent_id,
+									"slide_link": slide_link
+								}),
+								// error: function(req, err){ console.log('my message' + err); }
+								success: function(test_res) {   
+									console.log(test_res)
+									$.cookie("InviteId",test_res.invite_id);
+									console.log(test_res.invite_id);
+									$(WebId).text(test_res.invite_id);
+								}
+							}); 
 						});
 	                </script>
 	</body>
