修復演講頁

--- a/web/speech.html
+++ b/web/speech.html
@@ -82,6 +82,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/jquery.cookie.js"></script>
 			<!-- <script src="assets/js/test2.js"></script> -->
 			<script src="assets/js/speech.js"></script>
 	</body>
