--- a/web/speech.html
+++ b/web/speech.html
@@ -16,8 +16,7 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<img src="images/line hack.png" width="230" alt="">
-					<li><a href="home.html">首頁</a></li>
+					<img src="images/2.jpg" width="230" alt="">
 					<li><a href="speech.html">講師頁</a></li>
 					<li><a href="audience.html">觀眾頁</a></li>
 					<li><a href="voting.html">投票頁</a></li>
