將邀請碼修補

--- a/web/speech.html
+++ b/web/speech.html
@@ -99,7 +99,7 @@
 					  console.log(slide_key);
 
 					  document.getElementById("iframe_slide").src="https://www.slideshare.net/slideshow/embed_code/key/"+slide_key;
-					  $(WebId).text(test_res.invite_id);
+					  $(WebId).text(invite_id);
 				  });
 			</script>
 	</body>
