--- a/web/voting.html
+++ b/web/voting.html
@@ -68,7 +68,7 @@
 					  console.log(invite_id);
 					  console.log(slide_key);
 
-					  $(WebId).text(test_res.invite_id);
+					  $(WebId).text(invite_id);
 				  });
 			</script>
 	</body>
