--- a/web/audience.html
+++ b/web/audience.html
@@ -62,7 +62,7 @@
 					console.log(invite_id);
 					console.log(slide_key);
 
-					$(WebId).text(test_res.invite_id);
+					$(WebId).text(invite_id);
 
 					$("button").click(function(){
 						$("p").toggle();
