--- a/web/home.html
+++ b/web/home.html
@@ -123,7 +123,7 @@
 							console.log(invite_id);
 							console.log(slide_key);
 
-							$(WebId).text(test_res.invite_id);
+							$(WebId).text(invite_id);
 						});
 			</script>
 	</body>
