--- a/web/audience.html
+++ b/web/audience.html
@@ -47,6 +47,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/test1.js"></script>
+			<script src="assets/js/jquery.cookie.js"></script>
 			<script src="/jquery/jquery-1.11.1.min.js"></script>
 	</body>
 </html>
